--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 
 
     implementation 'com.android.support:appcompat-v7:28.0.0'
+
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -33,15 +34,18 @@ dependencies {
 //    implementation 'com.google.firebase:firebase-firestore:21.1.0'
 // compile 'com.google.firebase:firebase-auth:28.0.0'
     implementation 'com.android.support:design:28.0.0'
+    implementation 'com.google.firebase:firebase-core:10.2.0'
+    implementation 'com.google.firebase:firebase-database:10.2.0'
 
     implementation 'com.parse.bolts:bolts-android:1.4.0'
     implementation 'com.parse:parse-android:1.17.3'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
 
-    implementation "com.android.support:appcompat-v7:28.0.0"
+
     implementation "com.android.support:design:28.0.0"
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     annotationProcessor 'com.github.bumptech.glide:glide:4.7.1'
+    compile 'com.android.support:support-v4:28.0.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
