--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,6 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
 
-
     implementation 'com.android.support:appcompat-v7:28.0.0'
 
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
@@ -45,7 +44,7 @@ dependencies {
     implementation "com.android.support:design:28.0.0"
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     annotationProcessor 'com.github.bumptech.glide:glide:4.7.1'
-    compile 'com.android.support:support-v4:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
 
 }
 apply plugin: 'com.google.gms.google-services'
