--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,8 +46,9 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     annotationProcessor 'com.github.bumptech.glide:glide:4.7.1'
     implementation 'com.android.support:support-v4:28.0.0'
-    implementation 'de.hdodenhof:circleimageview:2.2.0'
-    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    annotationProcessor 'com.github.bumptech.glide:glide:4.7.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
 
 }
 apply plugin: 'com.google.gms.google-services'
