--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation 'com.parse:parse-android:1.17.3'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
 
+    implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation "com.android.support:design:28.0.0"
     implementation 'com.github.bumptech.glide:glide:4.7.1'
@@ -49,6 +50,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     annotationProcessor 'com.github.bumptech.glide:glide:4.7.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
+    implementation 'dyanamitechetan.vusikview:vusikview:1.1'
 
 }
 apply plugin: 'com.google.gms.google-services'
