--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:glide:4.7.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.8.1'
     implementation 'dyanamitechetan.vusikview:vusikview:1.1'
+    implementation 'org.parceler:parceler-api:1.1.12'
+    annotationProcessor 'org.parceler:parceler:1.1.12'
 
 }
 apply plugin: 'com.google.gms.google-services'
